--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,15 +1,42 @@
 <resources>
-    <string name="app_name">BookManager</string>
+    <string name="app_name">DemoProject</string>
 
-    <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
-    <string name="title_activity_login">Sign in</string>
+    <!-- LoginActivity -->
+    <string name="remem_pass">Remember my password</string>
+    <string name="recover_pass">Forgot password ?</string>
     <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password</string>
-    <string name="action_sign_in">Sign in or register</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome !"</string>
-    <string name="invalid_username">Not a valid username</string>
-    <string name="invalid_password">Password must be >5 characters</string>
-    <string name="login_failed">"Login failed"</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
+    <string name="title_activity_login">Sign in</string>
+    <string name="tv_register">Create new account</string>
+
+
+    <!--MenuActivity-->
+    <string name="title_activity_menu">Menu</string>
+    <string name="user">Profile</string>
+    <string name="book">Book</string>
+    <string name="category">Category</string>
+    <string name="invoice">Invoice</string>
+    <string name="best_selling">Best Selling</string>
+    <string name="statistical">Statistical</string>
+
+    <!--RegisterActivity-->
+    <string name="title_activity_register">Sign up</string>
+    <string name="action_sign_up">Sign up</string>
+    <string name="action_back_signin">Already have account ?</string>
+
+    <!--InvoiceActivity-->
+    <string name="title_activity_invoice">InvoiceActivity</string>
+    <string name="edt_invoice_id">invoice id</string>
+    <string name="btn_invoice_date">Pick date</string>
+    <string name="btn_invoice_add">Add</string>
+    <string name="notify_wrong_text">Input less than 7 characters</string>
+
+
 </resources>
