- Add Activity (AddBookActivity,AddCategoryActivity,AddUserActivity) - Add PagerAdapter - Add Fragment (FragmentDay,FragmentWeek,FragmentMonth) - Add layout for added activity - Modify BookActivity,CategoryActivity,StatisticalActivity,UserActivity (Add action to add) - Modify UserDAO - Modify layout activity_register,content_statistical,user_item - Add layout for fragment - Update strings.xml - Update Manifest - Update build.gradle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,9 @@
 
     <!--StatisticalActivity-->
     <string name="title_activity_statistical">Statistical</string>
+    <string name="title_activity_add_book">Add new Book</string>
+    <string name="title_activity_add_user">AddUserActivity</string>
+    <string name="title_activity_add_category">AddCategoryActivity</string>
+    <string name="sample">This is stat samples</string>
 
 </resources>
