--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,6 +56,15 @@
 
     <!--AddBookActivity-->
     <string name="title_activity_add_book">Add new Book</string>
+    <string name="edt_input_book_id">Book code</string>
+    <string name="edt_input_book_name">Book name</string>
+    <string name="btn_input_book_author">Author</string>
+    <string name="btn_input_book_producer">Producer</string>
+    <string name="edt_input_book_price">Price</string>
+    <string name="edt_input_book_quantity">Quantity</string>
+    <string name="btn_action_add">Save</string>
+    <string name="btn_action_cancel">Cancel</string>
+    <string name="btn_action_show">Show</string>
 
     <!--AddUserActivity-->
     <string name="title_activity_add_user">AddUserActivity</string>
@@ -79,5 +88,8 @@
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+
+
+
 
 </resources>
