- Modify AddBookActivity,AddCategoryActivity, BookActivity,CategoryActivity,InvoiceActivity, MenyActivity, UserActivity - Add CategorySpinnerAdapter - Modify BaseActivity - Add search.png icon for menu - Modify layout activity_invoice, activity_user, content_add_book, dialog_edit_category - Remove sample text inside fragment - Add layout category_spinner, dialog_edit_book - Modify menu.xml - Add menu_user.xml - Update strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,31 +69,38 @@
 
     <!--AddCategoryActivity-->
     <string name="title_activity_add_category">Add new Category</string>
-    <string name="edt_input_category_id">Book code</string>
-    <string name="edt_input_category_name">Book name</string>
-    <string name="edt_input_category_position">Author</string>
-    <string name="edt_input_category_description">Producer</string>
+    <string name="edt_input_category_id">Category code</string>
+    <string name="edt_input_category_name">Category name</string>
+    <string name="edt_input_category_position">Position</string>
+    <string name="edt_input_category_description">Description</string>
 
     <!--Sample-->
-    <string name="sample">This is stat samples</string>
-    <string name="title_activity_test">TestActivity</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
-    <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
 
+    <!--Toolbar Menu-->
+    <string name="action_search">Search</string>
+    <string name="action_add_user">Add new user</string>
+    <string name="action_change_pass">Change password</string>
+
+    <!--Drawer Navigation-->
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
     <string name="menu_send">Send</string>
+    <string name="title_activity_test">TestActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
 
     <!--Common-->
     <string name="btn_action_add">Save</string>
     <string name="btn_action_reset">Reset</string>
     <string name="btn_action_show">Show</string>
+    <string name="btn_action_save">Save</string>
+    <string name="btn_action_cancel">Cancel</string>
+
 
 </resources>
