--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,10 @@
     <string name="prompt_password_login">Password (optional)</string>
     <string name="action_sign_in">Sign in</string>
     <string name="tv_register">Create new account</string>
-
+    <string name="notify_empty_user">Username can not be empty!</string>
+    <string name="notify_length_pass">Password must have at least 5 characters</string>
+    <string name="notify_empty_pass">Password can not be empty!</string>
+    <string name="notify_wrong_username_password">Username or password not exist!</string>
 
     <!--MenuActivity-->
     <string name="title_activity_menu">Menu</string>
@@ -19,14 +22,6 @@
     <string name="invoice">Invoice</string>
     <string name="best_selling">Best Selling</string>
     <string name="statistical">Statistical</string>
-
-    <!--RegisterActivity-->
-    <string name="title_activity_register">Sign up</string>
-    <string name="action_sign_up">Sign up</string>
-    <string name="action_back_login">Already have account ?</string>
-    <string name="prompt_user_sign_up">Username</string>
-    <string name="prompt_email_sign_up">Email</string>
-    <string name="prompt_password_sign_up">Password</string>
 
     <!--InvoiceActivity-->
     <string name="title_activity_invoice">Invoice</string>
@@ -65,7 +60,11 @@
 
     <!--AddUserActivity-->
     <string name="title_activity_add_user">AddUserActivity</string>
-
+    <string name="edt_input_user_uname">Username</string>
+    <string name="edt_input_user_password">Password</string>
+    <string name="edt_input_user_re_password">Repassword</string>
+    <string name="edt_input_user_phone">Phone</string>
+    <string name="edt_input_user_full_name">Full name</string>
 
     <!--AddCategoryActivity-->
     <string name="title_activity_add_category">Add new Category</string>
@@ -83,11 +82,11 @@
 
     <!--Drawer Navigation-->
     <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
-    <string name="menu_tools">Tools</string>
-    <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_help">Help</string>
+    <string name="menu_feedback">Feedback</string>
+    <string name="menu_logout">Log out</string>
+    <string name="menu_setting">Setting</string>
+    <string name="menu_about">About</string>
     <string name="title_activity_test">TestActivity</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
@@ -101,11 +100,10 @@
     <string name="btn_action_show">Show</string>
     <string name="btn_action_save">Save</string>
     <string name="btn_action_cancel">Cancel</string>
-    <string name="edt_input_user_uname">Username</string>
-    <string name="edt_input_user_password">Password</string>
-    <string name="edt_input_user_re_password">Repassword</string>
-    <string name="edt_input_user_phone">Phone</string>
-    <string name="edt_input_user_full_name">Full name</string>
+    <string name="title_activity_about">AboutActivity</string>
+    <string name="title_activity_setting">SettingActivity</string>
+    <string name="title_activity_help">HelpActivity</string>
+    <string name="title_activity_feedback">FeedbackActivity</string>
 
 
 </resources>
